--- a/package.json
+++ b/package.json
@@ -11,21 +11,27 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "aos": "^2.3.4",
+    "framer-motion": "^12.23.3",
     "hls.js": "^1.6.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "three": "^0.178.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
+    "@biomejs/biome": "2.1.1",
+    "@eslint/js": "^9.31.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/three": "^0.178.1",
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.29.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0",
+    "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.0"
